Use isBlank() for uid/actor checks per review
FeedbackLogServiceImpl.recordAction guarded uid with isEmpty(), so a
whitespace-only uid slipped past the null/empty check. The two spots in
ExternalArticleController already caught whitespace-only via
trim().isEmpty() — swapped to isBlank() for the same effect without the
trim() call.